@@ -1,0 +1,46 @@
+
+/* Name of package */
+#ifndef INTARNA_PACKAGE
+#define INTARNA_PACKAGE "@PACKAGE@"
+#endif
+
+/* Define to the address where bug reports for this package should be sent. */
+#ifndef INTARNA_PACKAGE_BUGREPORT
+#define INTARNA_PACKAGE_BUGREPORT "@PACKAGE_BUGREPORT@"
+#endif
+
+/* Define to the full name of this package. */
+#ifndef INTARNA_PACKAGE_NAME
+#define INTARNA_PACKAGE_NAME "@PACKAGE_NAME@"
+#endif
+
+/* Define to the full name and version of this package. */
+#ifndef INTARNA_PACKAGE_STRING
+#define INTARNA_PACKAGE_STRING "@PACKAGE_STRING@"
+#endif
+
+/* Define to the one symbol short name of this package. */
+#ifndef INTARNA_PACKAGE_TARNAME
+#define INTARNA_PACKAGE_TARNAME "@PACKAGE_TARNAME@"
+#endif
+
+/* Define to the home page for this package. */
+#ifndef INTARNA_PACKAGE_URL
+#define INTARNA_PACKAGE_URL "@PACKAGE_URL@"
+#endif
+
+/* Define to the version of this package. */
+#ifndef INTARNA_PACKAGE_VERSION
+#define INTARNA_PACKAGE_VERSION "@PACKAGE_VERSION@"
+#endif
+
+/* Version number of package */
+#ifndef INTARNA_VERSION
+#define INTARNA_VERSION "@VERSION@"
+#endif
+
+
+/* multi-threading support */
+#ifndef INTARNA_MULITHREADING
+#define INTARNA_MULITHREADING @INTARNA_MULITHREADING@
+#endif
